--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <title>Gradient Background</title>
     </head>
     <body>
-        <h1>Background Generator</h1>
+        <h1>Background Generator!</h1>
         <button>Random</button>
         <input class="color1" type="color" name="color1" value="#00ff00">
         <input class="color2" type="color" name="color2" value="#ff0000">
